Finalizando a estilizaçao sem mobilidade

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -14,7 +14,8 @@
     flex-direction: row;
     font-family: Nunito;
     justify-content: space-between;
-    padding: 2rem 5rem;
+    padding: 2rem 13.8rem;
+    box-shadow:  0 0 5px;
 }
 
 .container-header a{
@@ -34,13 +35,29 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     padding: 12rem;
-    background-image: url(/assets/images/forma1.svg);
-    background-repeat: no-repeat;
+}
 
+.forma-um {
+    position: absolute;
+    top: 220px;
+    left: -100px;
+    z-index: -1;
+}
+
+.forma-dois {
+    position: absolute;
+    top: 100px;
+    right: -180px;
+    z-index: -1;
 }
 
 .container-main-right {
-    
+    padding: 0 30px;
+}
+
+.container-main-left {
+    display: flex;
+    justify-content: flex-end;
 }
 
 .container-main p{
@@ -59,8 +76,23 @@
     margin: 2rem 0;
 }
 
+.social-media {
+    cursor: pointer;
+}
+
 .scroll {
-    display: flex;
-    justify-content: center;
-    
+    text-align: center;
+}
+
+.scroll p {
+    margin-bottom: 10px;
+    font-family: Nunito;
+    font-weight: 700;
+}
+
+@media screen and (max-width: 1006px) {
+
+    .container-main {
+    grid-template-columns: 1fr;
+    }
 }
